--- a/css/style.css
+++ b/css/style.css
@@ -324,13 +324,17 @@ a:hover {
 }
 
 .circular-transition {
+    position: absolute;
     width: 60px;
     height: 60px;
     display: inline-block;
     border-radius: 50%;
     background-color: #fff;
     transition: all 0.4s ease-in-out;
-    margin: -1px;
+    margin-top: -30px;
+    margin-left: -30px;
+    top: 50%;
+    left: 50%;
 }
 
 @media only screen and (min-width:1025px) {
